--- a/articles/Article 12.qmd
+++ b/articles/Article 12.qmd
@@ -150,9 +150,9 @@
 ## Sec. 12-19. (Repealed).
 <p>(Source: P.A. 97-227, eff. 1-1-12. Repealed by P.A. 96-1551, eff. 7-1-11.)</p>### (720 ILCS 5/12-20) (from Ch. 38, par. 12-20)
 ## Sec. 12-20. Sale of body parts.
-<p class='subsection'>\(a) Except as provided in subsection (b), any person who knowingly buys or sells, or offers to buy or sell, a human body or any part of a human body, is guilty of a Class A misdemeanor for the first conviction and a Class 4 felony for subsequent convictions.</p><p class='subsection'>\(b) This Section does not prohibit:</p><p class='paragraph'>\(1) An anatomical gift made in accordance with the</p><p>Illinois Anatomical Gift Act.</p><p class='paragraph'>\(2) (Blank).</p><p class='paragraph'>\(3) Reimbursement of actual expenses incurred by a living person in donating an organ, tissue or other body part or fluid for transplantation, implantation, infusion, injection, or other medical or scientific purpose, including medical costs, loss of income, and travel expenses.</p><p class='paragraph'>\(4) Payments provided under a plan of insurance or other health care coverage.</p><p class='paragraph'>\(5) Reimbursement of reasonable costs associated with the removal, storage or transportation of a human body or part thereof donated for medical or scientific purposes.</p><p class='paragraph'>\(6) Purchase or sale of blood, plasma, blood products or derivatives, other body fluids, or human hair.</p><p class='paragraph'>\(7) Purchase or sale of drugs, reagents or other substances made from human bodies or body parts, for use in medical or scientific research, treatment or diagnosis.</p><p>(Source: P.A. 96-1551, eff. 7-1-11 .)</p>### (720 ILCS 5/12-20.5)
+<p class='subsection'>\(a) Except as provided in subsection (b), any person who knowingly buys or sells, or offers to buy or sell, a human body or any part of a human body, is guilty of a Class A misdemeanor for the first conviction and a Class 4 felony for subsequent convictions.</p><p class='subsection'>\(b) This Section does not prohibit:</p><p class='paragraph'>\(1) An anatomical gift made in accordance with the Illinois Anatomical Gift Act.</p><p class='paragraph'>\(2) (Blank).</p><p class='paragraph'>\(3) Reimbursement of actual expenses incurred by a living person in donating an organ, tissue or other body part or fluid for transplantation, implantation, infusion, injection, or other medical or scientific purpose, including medical costs, loss of income, and travel expenses.</p><p class='paragraph'>\(4) Payments provided under a plan of insurance or other health care coverage.</p><p class='paragraph'>\(5) Reimbursement of reasonable costs associated with the removal, storage or transportation of a human body or part thereof donated for medical or scientific purposes.</p><p class='paragraph'>\(6) Purchase or sale of blood, plasma, blood products or derivatives, other body fluids, or human hair.</p><p class='paragraph'>\(7) Purchase or sale of drugs, reagents or other substances made from human bodies or body parts, for use in medical or scientific research, treatment or diagnosis.</p><p>(Source: P.A. 96-1551, eff. 7-1-11 .)</p>### (720 ILCS 5/12-20.5)
 ## Sec. 12-20.5. Dismembering a human body.
-<p class='subsection'>\(a) A person commits dismembering a human body when he or she knowingly dismembers, severs, separates, dissects, or mutilates any body part of a deceased's body.</p><p class='subsection'>\(b) This Section does not apply to:</p><p class='paragraph'>\(1) an anatomical gift made in accordance with the</p><p>Illinois Anatomical Gift Act;</p><p class='paragraph'>\(2) (blank);</p><p class='paragraph'>\(3) the purchase or sale of drugs, reagents, or other substances made from human body parts, for the use in medical or scientific research, treatment, or diagnosis;</p><p class='paragraph'>\(4) persons employed by a county medical examiner's office or coroner's office acting within the scope of their employment while performing an autopsy;</p><p class='paragraph'>\(5) the acts of a licensed funeral director or embalmer while performing acts authorized by the Funeral Directors and Embalmers Licensing Code;</p><p class='paragraph'>\(6) the acts of emergency medical personnel or physicians performed in good faith and according to the usual and customary standards of medical practice in an attempt to resuscitate a life; or</p><p class='paragraph'>\(7) physicians licensed to practice medicine in all of its branches or holding a visiting professor, physician, or resident permit under the Medical Practice Act of 1987, performing acts in accordance with usual and customary standards of medical practice, or a currently enrolled student in an accredited medical school in furtherance of his or her education at the accredited medical school.</p><p class='subsection'>\(c) It is not a defense to a violation of this Section that the decedent died due to natural, accidental, or suicidal causes.</p><p class='subsection'>\(d) Sentence. Dismembering a human body is a Class X felony.</p><p>(Source: P.A. 95-331, eff. 8-21-07; 96-1551, eff. 7-1-11 .)</p>### (720 ILCS 5/12-20.6)
+<p class='subsection'>\(a) A person commits dismembering a human body when he or she knowingly dismembers, severs, separates, dissects, or mutilates any body part of a deceased's body.</p><p class='subsection'>\(b) This Section does not apply to:</p><p class='paragraph'>\(1) an anatomical gift made in accordance with the Illinois Anatomical Gift Act;</p><p class='paragraph'>\(2) (blank);</p><p class='paragraph'>\(3) the purchase or sale of drugs, reagents, or other substances made from human body parts, for the use in medical or scientific research, treatment, or diagnosis;</p><p class='paragraph'>\(4) persons employed by a county medical examiner's office or coroner's office acting within the scope of their employment while performing an autopsy;</p><p class='paragraph'>\(5) the acts of a licensed funeral director or embalmer while performing acts authorized by the Funeral Directors and Embalmers Licensing Code;</p><p class='paragraph'>\(6) the acts of emergency medical personnel or physicians performed in good faith and according to the usual and customary standards of medical practice in an attempt to resuscitate a life; or</p><p class='paragraph'>\(7) physicians licensed to practice medicine in all of its branches or holding a visiting professor, physician, or resident permit under the Medical Practice Act of 1987, performing acts in accordance with usual and customary standards of medical practice, or a currently enrolled student in an accredited medical school in furtherance of his or her education at the accredited medical school.</p><p class='subsection'>\(c) It is not a defense to a violation of this Section that the decedent died due to natural, accidental, or suicidal causes.</p><p class='subsection'>\(d) Sentence. Dismembering a human body is a Class X felony.</p><p>(Source: P.A. 95-331, eff. 8-21-07; 96-1551, eff. 7-1-11 .)</p>### (720 ILCS 5/12-20.6)
 ## Sec. 12-20.6. Abuse of a corpse.
 <p class='subsection'>\(a) In this Section:</p><p>"Corpse" means the dead body of a human being.</p><p>"Sexual conduct" has the meaning ascribed to the term in Section 11-0.1 of this Code.</p><p class='subsection'>\(b) A person commits abuse of a corpse if he or she intentionally:</p><p class='paragraph'>\(1) engages in sexual conduct with a corpse or involving a corpse; or</p><p class='paragraph'>\(2) removes or carries away a corpse and is not authorized by law to do so.</p><p class='subsection'>\(c) Sentence.</p><p class='paragraph'>\(1) A person convicted of violating paragraph (1) of subsection (b) of this Section is guilty of a Class 2 felony.</p><p class='paragraph'>\(2) A person convicted of violating paragraph (2) of subsection (b) of this Section is guilty of a Class 4 felony.</p><p class='subsection'>\(d) Paragraph (2) of subsection (b) of this Section does not apply to:</p><p class='paragraph'>\(1) persons employed by a county medical examiner's office or coroner's office acting within the scope of their employment;</p><p class='paragraph'>\(2) the acts of a licensed funeral director or embalmer while performing acts authorized by the Funeral Directors and Embalmers Licensing Code;</p><p class='paragraph'>\(3) cemeteries and cemetery personnel while performing acts pursuant to a bona fide request from the involved cemetery consumer or his or her heirs, or pursuant to an interment or disinterment permit or a court order, or as authorized under Section 14.5 of the Cemetery Protection Act, or any other actions legally authorized for cemetery employees;</p><p class='paragraph'>\(4) the acts of emergency medical personnel or physicians performed in good faith and according to the usual and customary standards of medical practice in an attempt to resuscitate a life;</p><p class='paragraph'>\(5) physicians licensed to practice medicine in all of its branches or holding a visiting professor, physician, or resident permit under the Medical Practice Act of 1987, performing acts in accordance with usual and customary standards of medical practice, or a currently enrolled student in an accredited medical school in furtherance of his or her education at the accredited medical school; or</p><p class='paragraph'>\(6) removing or carrying away a corpse by the employees, independent contractors, or other persons designated by the federally designated organ procurement agency engaged in the organ and tissue procurement process.</p><p>(Source: P.A. 97-1072, eff. 8-24-12 .)</p>### (720 ILCS 5/12-21) (from Ch. 38, par. 12-21)
 ## Sec. 12-21. (Repealed).
@@ -162,7 +162,7 @@
 <p>(This Section was renumbered as Section 12C-5 by P.A. 97-1109.)</p>## Sec. 12-21.6. (Renumbered).
 <p>(Source: P.A. 92-408, eff. 8-17-01; 92-432, eff. 8-17-01; 92-515, eff. 6-1-02; 92-651, eff. 7-11-02</p><p>. Renumbered by 97-1109, eff. 1-1-13.)</p>### (720 ILCS 5/12-21.6-5)
 ## Sec. 12-21.6-5. Parent or guardian leaving custody or control of child with child sex offender.
-<p class='subsection'>\(a) For the purposes of this Section, "minor" means a person under 18 years of age; and "child sex offender" means a sex offender who is required to register under the Sex Offender Registration Act and is a child sex offender as defined in Sections 11-9.3 and 11-9.4 of this Code.</p><p class='subsection'>\(b) It is unlawful for a parent or guardian of a minor to knowingly leave that minor in the custody or control of a child sex offender, or allow the child sex offender unsupervised access to the minor.</p><p class='subsection'>\(c) This Section does not apply to leaving the minor in the custody or control of, or allowing unsupervised access to the minor by:</p><p class='paragraph'>\(1) a child sex offender who is the parent of the minor;</p><p class='paragraph'>\(2) a person convicted of a violation of subsection</p><p class='subsection'>\(c) of Section 12-15 of this Code; or</p><p class='paragraph'>\(3) a child sex offender who is married to and living in the same household with the parent or guardian of the minor.</p><p>This subsection (c) shall not be construed to allow a child sex offender to knowingly reside within 500 feet of the minor victim of the sex offense if prohibited by subsection (b-6) of Section 11-9.4 of this Code.</p><p class='subsection'>\(d) Sentence. A person who violates this Section is guilty of a Class A misdemeanor.</p><p class='subsection'>\(e) Nothing in this Section shall prohibit the filing of a petition or the instituting of any proceeding under Article II of the Juvenile Court Act of 1987 relating to abused minors.</p><p>(Source: P.A. 96-1094, eff. 1-1-11.)</p>### (720 ILCS 5/12-21.7)
+<p class='subsection'>\(a) For the purposes of this Section, "minor" means a person under 18 years of age; and "child sex offender" means a sex offender who is required to register under the Sex Offender Registration Act and is a child sex offender as defined in Sections 11-9.3 and 11-9.4 of this Code.</p><p class='subsection'>\(b) It is unlawful for a parent or guardian of a minor to knowingly leave that minor in the custody or control of a child sex offender, or allow the child sex offender unsupervised access to the minor.</p><p class='subsection'>\(c) This Section does not apply to leaving the minor in the custody or control of, or allowing unsupervised access to the minor by:</p><p class='paragraph'>\(1) a child sex offender who is the parent of the minor;</p><p class='paragraph'>\(2) a person convicted of a violation of subsection (c) of Section 12-15 of this Code; or</p><p class='paragraph'>\(3) a child sex offender who is married to and living in the same household with the parent or guardian of the minor.</p><p>This subsection (c) shall not be construed to allow a child sex offender to knowingly reside within 500 feet of the minor victim of the sex offense if prohibited by subsection (b-6) of Section 11-9.4 of this Code.</p><p class='subsection'>\(d) Sentence. A person who violates this Section is guilty of a Class A misdemeanor.</p><p class='subsection'>\(e) Nothing in this Section shall prohibit the filing of a petition or the instituting of any proceeding under Article II of the Juvenile Court Act of 1987 relating to abused minors.</p><p>(Source: P.A. 96-1094, eff. 1-1-11.)</p>### (720 ILCS 5/12-21.7)
 ## Sec. 12-21.7. (Repealed).
 <p>(Source: P.A. 94-12, eff. 1-1-06. Repealed by P.A. 97-1109, eff. 1-1-13.)</p>### (720 ILCS 5/12-22)
 <p>(This Section was renumbered as Section 12C-15 by P.A. 97-1109.)</p>## Sec. 12-22. (Renumbered).
@@ -176,14 +176,13 @@
 ## Sec. 12-33. Ritualized abuse of a child.
 <p class='subsection'>\(a) A person commits ritualized abuse of a child when he or she knowingly commits any of the following acts with, upon, or in the presence of a child as part of a ceremony, rite or any similar observance:</p><p class='paragraph'>\(1) actually or in simulation, tortures, mutilates, or sacrifices any warm-blooded animal or human being;</p><p class='paragraph'>\(2) forces ingestion, injection or other application of any narcotic, drug, hallucinogen or anaesthetic for the purpose of dulling sensitivity, cognition, recollection of, or resistance to any criminal activity;</p><p class='paragraph'>\(3) forces ingestion, or external application, of human or animal urine, feces, flesh, blood, bones, body secretions, nonprescribed drugs or chemical compounds;</p><p class='paragraph'>\(4) involves the child in a mock, unauthorized or unlawful marriage ceremony with another person or representation of any force or deity, followed by sexual contact with the child;</p><p class='paragraph'>\(5) places a living child into a coffin or open grave containing a human corpse or remains;</p><p class='paragraph'>\(6) threatens death or serious harm to a child, his or her parents, family, pets, or friends that instills a well-founded fear in the child that the threat will be carried out; or</p><p class='paragraph'>\(7) unlawfully dissects, mutilates, or incinerates a human corpse.</p><p class='subsection'>\(b) The provisions of this Section shall not be construed to apply to:</p><p class='paragraph'>\(1) lawful agricultural, animal husbandry, food preparation, or wild game hunting and fishing practices and specifically the branding or identification of livestock;</p><p class='paragraph'>\(2) the lawful medical practice of male circumcision or any ceremony related to male circumcision;</p><p class='paragraph'>\(3) any state or federally approved, licensed, or funded research project; or</p><p class='paragraph'>\(4) the ingestion of animal flesh or blood in the performance of a religious service or ceremony.</p><p class='subsection'>\(b-5) For the purposes of this Section, "child" means any person under 18 years of age.</p><p class='subsection'>\(c) Ritualized abuse of a child is a Class 1 felony for a first offense. A second or subsequent conviction for ritualized abuse of a child is a Class X felony for which an offender who has attained the age of 18 years at the time of the commission of the offense may be sentenced to a term of natural life imprisonment and an offender under the age of 18 years at the time of the commission of the offense shall be sentenced under Section 5-4.5-105 of the Unified Code of Corrections.</p><p class='subsection'>\(d) (Blank).</p><p>(Source: P.A. 99-69, eff. 1-1-16 .)</p>### (720 ILCS 5/12-34)
 ## Sec. 12-34. Female genital mutilation.
-<p class='subsection'>\(a) Except as otherwise permitted in subsection (b), whoever knowingly circumcises, excises, or infibulates, in whole or in part, the labia majora, labia minora, or clitoris of another commits female genital mutilation. Consent to the procedure by a minor on whom it is performed or by the minor's parent or guardian is not a defense to a violation of this Section.</p><p class='subsection'>\(a-5) A parent, guardian, or other person having physical custody or control of a child who knowingly facilitates or permits the circumcision, excision, or infibulation, in whole or in part, of the labia majora, labia minora, or clitoris of the child commits female genital mutilation.</p><p class='subsection'>\(b) A surgical procedure is not a violation of subsection (a) if the procedure is performed by a physician licensed to practice medicine in all its branches and:</p><p class='paragraph'>\(1) is necessary to the health of the person on whom it is performed; or</p><p class='paragraph'>\(2) is performed on a person who is in labor or who has just given birth and is performed for medical purposes connected with that labor or birth.</p><p class='subsection'>\(c) Sentence. Female genital mutilation as described in subsection (a) is a Class X felony. Female genital mutilation as described in subsection (a-5) is a Class 1 felony.</p><p>(Source: P.A. 101-285, eff. 1-1-20 .)</p>### (720 ILCS 5/Art. 12, Subdiv. 25 heading)
-<p>SUBDIVISION 25.</p><p>OTHER HARM OFFENSES</p><p>(Source: P.A. 96-1551, eff. 7-1-11.)</p>### (720 ILCS 5/12-34.5)
+<p class='subsection'>\(a) Except as otherwise permitted in subsection (b), whoever knowingly circumcises, excises, or infibulates, in whole or in part, the labia majora, labia minora, or clitoris of another commits female genital mutilation. Consent to the procedure by a minor on whom it is performed or by the minor's parent or guardian is not a defense to a violation of this Section.</p><p class='subsection'>\(a-5) A parent, guardian, or other person having physical custody or control of a child who knowingly facilitates or permits the circumcision, excision, or infibulation, in whole or in part, of the labia majora, labia minora, or clitoris of the child commits female genital mutilation.</p><p class='subsection'>\(b) A surgical procedure is not a violation of subsection (a) if the procedure is performed by a physician licensed to practice medicine in all its branches and:</p><p class='paragraph'>\(1) is necessary to the health of the person on whom it is performed; or</p><p class='paragraph'>\(2) is performed on a person who is in labor or who has just given birth and is performed for medical purposes connected with that labor or birth.</p><p class='subsection'>\(c) Sentence. Female genital mutilation as described in subsection (a) is a Class X felony. Female genital mutilation as described in subsection (a-5) is a Class 1 felony.</p><p>(Source: P.A. 101-285, eff. 1-1-20 .)</p>### (720 ILCS 5/12-34.5)
 <p class='subsection'>\(was 720 ILCS 5/12-31)</p>## Sec. 12-34.5. Inducement to commit suicide.
 <p class='subsection'>\(a) A person commits inducement to commit suicide when he or she does either of the following:</p><p class='paragraph'>\(1) Knowingly coerces another to commit suicide and the other person commits or attempts to commit suicide as a direct result of the coercion, and he or she exercises substantial control over the other person through (i) control of the other person's physical location or circumstances; (ii) use of psychological pressure; or (iii) use of actual or ostensible religious, political, social, philosophical or other principles.</p><p class='paragraph'>\(2) With knowledge that another person intends to commit or attempt to commit suicide, intentionally (i) offers and provides the physical means by which another person commits or attempts to commit suicide, or (ii) participates in a physical act by which another person commits or attempts to commit suicide.</p><p>For the purposes of this Section, "attempts to commit suicide" means any act done with the intent to commit suicide and which constitutes a substantial step toward commission of suicide.</p><p class='subsection'>\(b) Sentence. Inducement to commit suicide under paragraph (a)(1) when the other person commits suicide as a direct result of the coercion is a Class 2 felony. Inducement to commit suicide under paragraph (a)(2) when the other person commits suicide as a direct result of the assistance provided is a Class 4 felony. Inducement to commit suicide under paragraph (a)(1) when the other person attempts to commit suicide as a direct result of the coercion is a Class 3 felony. Inducement to commit suicide under paragraph (a)(2) when the other person attempts to commit suicide as a direct result of the assistance provided is a Class A misdemeanor.</p><p class='subsection'>\(c) The lawful compliance or a good-faith attempt at lawful compliance with the Illinois Living Will Act, the Health Care Surrogate Act, or the Powers of Attorney for Health Care Law is not inducement to commit suicide under paragraph (a)(2) of this Section.</p><p>(Source: P.A. 96-1551, eff. 7-1-11 .)</p>### (720 ILCS 5/12-35)
 ## Sec. 12-35. Sexual conduct or sexual contact with an animal.
-<p class='subsection'>\(a) A person may not knowingly engage in any sexual conduct or sexual contact with an animal.</p><p class='subsection'>\(b) A person may not knowingly cause, aid, or abet another person to engage in any sexual conduct or sexual contact with an animal.</p><p class='subsection'>\(c) A person may not knowingly permit any sexual conduct or sexual contact with an animal to be conducted on any premises under his or her charge or control.</p><p class='subsection'>\(d) A person may not knowingly engage in, promote, aid, or abet any activity involving any sexual conduct or sexual contact with an animal for a commercial or recreational purpose.</p><p class='subsection'>\(e) Sentence. A person who violates this Section is guilty of a Class 4 felony. A person who violates this Section in the presence of a person under 18 years of age or causes the animal serious physical injury or death is guilty of a Class 3 felony.</p><p class='subsection'>\(f) In addition to the penalty imposed in subsection (e), the court may order that the defendant do any of the following:</p><p class='paragraph'>\(1) Not harbor animals or reside in any household where animals are present for a reasonable period of time or permanently, if necessary.</p><p class='paragraph'>\(2) Relinquish and permanently forfeit all animals residing in the household to a recognized or duly organized animal shelter or humane society.</p><p class='paragraph'>\(3) Undergo a psychological evaluation and counseling at defendant's expense.</p><p class='paragraph'>\(4) Reimburse the animal shelter or humane society for any reasonable costs incurred for the care and maintenance of the animal involved in the sexual conduct or sexual contact in addition to any animals relinquished to the animal shelter or humane society.</p><p class='subsection'>\(g) Nothing in this Section shall be construed to prohibit accepted animal husbandry practices or accepted veterinary medical practices by a licensed veterinarian or certified veterinary technician.</p><p class='subsection'>\(h) If the court has reasonable grounds to believe that a violation of this Section has occurred, the court may order the seizure of all animals involved in the alleged violation as a condition of bond of a person charged with a violation of this Section.</p><p class='item'>\(i) In this Section:</p><p>"Animal" means every creature, either alive or dead, other than a human being.</p><p>"Sexual conduct" means any knowing touching or fondling by a person, either directly or through clothing, of the sex organs or anus of an animal or any transfer or transmission of semen by the person upon any part of the animal, for the purpose of sexual gratification or arousal of the person.</p><p>"Sexual contact" means any contact, however slight, between the sex organ or anus of a person and the sex organ, mouth, or anus of an animal, or any intrusion, however slight, of any part of the body of the person into the sex organ or anus of an animal, for the purpose of sexual gratification or arousal of the person. Evidence of emission of semen is not required to prove sexual contact.</p><p>(Source: P.A. 96-1551, eff. 7-1-11 .)</p>### (720 ILCS 5/12-36)
+<p class='subsection'>\(a) A person may not knowingly engage in any sexual conduct or sexual contact with an animal.</p><p class='subsection'>\(b) A person may not knowingly cause, aid, or abet another person to engage in any sexual conduct or sexual contact with an animal.</p><p class='subsection'>\(c) A person may not knowingly permit any sexual conduct or sexual contact with an animal to be conducted on any premises under his or her charge or control.</p><p class='subsection'>\(d) A person may not knowingly engage in, promote, aid, or abet any activity involving any sexual conduct or sexual contact with an animal for a commercial or recreational purpose.</p><p class='subsection'>\(e) Sentence. A person who violates this Section is guilty of a Class 4 felony. A person who violates this Section in the presence of a person under 18 years of age or causes the animal serious physical injury or death is guilty of a Class 3 felony.</p><p class='subsection'>\(f) In addition to the penalty imposed in subsection (e), the court may order that the defendant do any of the following:</p><p class='paragraph'>\(1) Not harbor animals or reside in any household where animals are present for a reasonable period of time or permanently, if necessary.</p><p class='paragraph'>\(2) Relinquish and permanently forfeit all animals residing in the household to a recognized or duly organized animal shelter or humane society.</p><p class='paragraph'>\(3) Undergo a psychological evaluation and counseling at defendant's expense.</p><p class='paragraph'>\(4) Reimburse the animal shelter or humane society for any reasonable costs incurred for the care and maintenance of the animal involved in the sexual conduct or sexual contact in addition to any animals relinquished to the animal shelter or humane society.</p><p class='subsection'>\(g) Nothing in this Section shall be construed to prohibit accepted animal husbandry practices or accepted veterinary medical practices by a licensed veterinarian or certified veterinary technician.</p><p class='subsection'>\(h) If the court has reasonable grounds to believe that a violation of this Section has occurred, the court may order the seizure of all animals involved in the alleged violation as a condition of bond of a person charged with a violation of this Section.</p><p class='subsection'>\(i) In this Section:</p><p>"Animal" means every creature, either alive or dead, other than a human being.</p><p>"Sexual conduct" means any knowing touching or fondling by a person, either directly or through clothing, of the sex organs or anus of an animal or any transfer or transmission of semen by the person upon any part of the animal, for the purpose of sexual gratification or arousal of the person.</p><p>"Sexual contact" means any contact, however slight, between the sex organ or anus of a person and the sex organ, mouth, or anus of an animal, or any intrusion, however slight, of any part of the body of the person into the sex organ or anus of an animal, for the purpose of sexual gratification or arousal of the person. Evidence of emission of semen is not required to prove sexual contact.</p><p>(Source: P.A. 96-1551, eff. 7-1-11 .)</p>### (720 ILCS 5/12-36)
 ## Sec. 12-36. Possession of unsterilized or vicious dogs by felons prohibited.
-<p class='subsection'>\(a) For a period of 10 years commencing upon the release of a person from incarceration, it is unlawful for a person convicted of a forcible felony, a felony violation of the Humane Care for Animals Act, a felony violation of Section 26-5 or 48-1 of this Code, a felony violation of Article 24 of this Code, a felony violation of Class 3 or higher of the Illinois Controlled Substances Act, a felony violation of Class 3 or higher of the Cannabis Control Act, or a felony violation of Class 2 or higher of the Methamphetamine Control and Community Protection Act, to knowingly own, possess, have custody of, or reside in a residence with, either:</p><p class='paragraph'>\(1) an unspayed or unneutered dog or puppy older than</p><p>12 weeks of age; or</p><p class='paragraph'>\(2) irrespective of whether the dog has been spayed or neutered, any dog that has been determined to be a vicious dog under Section 15 of the Animal Control Act.</p><p class='subsection'>\(b) Any dog owned, possessed by, or in the custody of a person convicted of a felony, as described in subsection (a), must be microchipped for permanent identification.</p><p class='subsection'>\(c) Sentence. A person who violates this Section is guilty of a Class A misdemeanor.</p><p class='subsection'>\(d) It is an affirmative defense to prosecution under this Section that the dog in question is neutered or spayed, or that the dog in question was neutered or spayed within 7 days of the defendant being charged with a violation of this Section. Medical records from, or the certificate of, a doctor of veterinary medicine licensed to practice in the State of Illinois who has personally examined or operated upon the dog, unambiguously indicating whether the dog in question has been spayed or neutered, shall be prima facie true and correct, and shall be sufficient evidence of whether the dog in question has been spayed or neutered. This subsection (d) is not applicable to any dog that has been determined to be a vicious dog under Section 15 of the Animal Control Act.</p><p>(Source: P.A. 96-185, eff. 1-1-10; 97-1108, eff. 1-1-13.)</p>### (720 ILCS 5/12-37)
+<p class='subsection'>\(a) For a period of 10 years commencing upon the release of a person from incarceration, it is unlawful for a person convicted of a forcible felony, a felony violation of the Humane Care for Animals Act, a felony violation of Section 26-5 or 48-1 of this Code, a felony violation of Article 24 of this Code, a felony violation of Class 3 or higher of the Illinois Controlled Substances Act, a felony violation of Class 3 or higher of the Cannabis Control Act, or a felony violation of Class 2 or higher of the Methamphetamine Control and Community Protection Act, to knowingly own, possess, have custody of, or reside in a residence with, either:</p><p class='paragraph'>\(1) an unspayed or unneutered dog or puppy older than 12 weeks of age; or</p><p class='paragraph'>\(2) irrespective of whether the dog has been spayed or neutered, any dog that has been determined to be a vicious dog under Section 15 of the Animal Control Act.</p><p class='subsection'>\(b) Any dog owned, possessed by, or in the custody of a person convicted of a felony, as described in subsection (a), must be microchipped for permanent identification.</p><p class='subsection'>\(c) Sentence. A person who violates this Section is guilty of a Class A misdemeanor.</p><p class='subsection'>\(d) It is an affirmative defense to prosecution under this Section that the dog in question is neutered or spayed, or that the dog in question was neutered or spayed within 7 days of the defendant being charged with a violation of this Section. Medical records from, or the certificate of, a doctor of veterinary medicine licensed to practice in the State of Illinois who has personally examined or operated upon the dog, unambiguously indicating whether the dog in question has been spayed or neutered, shall be prima facie true and correct, and shall be sufficient evidence of whether the dog in question has been spayed or neutered. This subsection (d) is not applicable to any dog that has been determined to be a vicious dog under Section 15 of the Animal Control Act.</p><p>(Source: P.A. 96-185, eff. 1-1-10; 97-1108, eff. 1-1-13.)</p>### (720 ILCS 5/12-37)
 ## Sec. 12-37. Possession and sale of caustic and noxious substances.
 <p class='subsection'>\(a) Except as provided in subsection (b), it is unlawful for any person knowingly to have in his or her possession or to carry about any of the substances which are regulated by Title 16 CFR Section 1500.129 of the Federal Caustic Poison Act and are required to contain the words "causes severe burns" as the affirmative statement of principal hazard on its label.</p><p class='subsection'>\(b) Provided that the product is not used to threaten, intimidate, injure, or cause distress to another, the restrictions of subsection (a) do not apply to:</p><p class='paragraph'>\(1) persons while engaged in the legitimate commercial manufacture, distribution, storage, or use of the specified substances;</p><p class='paragraph'>\(2) persons while engaged in legitimate scientific or medical research, study, teaching or treatment involving the use of such substances, including without limitation physicians, pharmacists, scientists, teachers, students, and employees of regularly established laboratories, manufacturing and wholesale pharmacies, retail pharmacies, medical treatment facilities, schools, colleges, and universities;</p><p class='paragraph'>\(3) persons who have procured any of the specified substances for medicinal purposes upon a prescription of a physician licensed to practice medicine in all its branches under the Medical Practice Act of 1987;</p><p class='paragraph'>\(4) commercial or consumer products that contain any of the specified substances found in subsection (a) including, but not limited to, batteries;</p><p class='paragraph'>\(5) production agriculture as defined in Section 3-5 of the Use Tax Act;</p><p class='paragraph'>\(6) persons while engaged in the possession or transportation, or both, of a commercial product containing any of the substances specified in subsection (a) for retail sale;</p><p class='paragraph'>\(7) persons while engaged in the possession, transportation, or use, unrelated to a retail sale, of any of the substances specified in subsection (a); or</p><p class='paragraph'>\(8) persons engaged in the possession, transportation, or use of a commercial product containing any of the substances specified in subsection (a).</p><p class='subsection'>\(c) Sentence. A violation of this Section is a Class 4 felony.</p><p class='subsection'>\(d) The regulation of the possession and carrying of caustic and noxious substances under this Section is an exclusive power and function of the State. A home rule unit may not regulate the possession and carrying of caustic and noxious substances and any ordinance or local law contrary to this Section is declared void. This is a denial and limitation of home rule powers and functions under subsection (h) of Section 6 of Article VII of the Illinois Constitution.</p><p>(Source: P.A. 97-565, eff. 1-1-12.)</p>### (720 ILCS 5/12-38)
 ## Sec. 12-38. Restrictions on purchase or acquisition of corrosive or caustic acid.
