--- a/articles/Article 31.qmd
+++ b/articles/Article 31.qmd
@@ -19,5 +19,6 @@
 <p class='subsection'>\(a) Whoever, with intent to aid any prisoner in escaping from any penal institution, conveys into the institution or transfers to the prisoner anything for use in escaping commits a Class A misdemeanor.</p><p class='subsection'>\(b) Whoever knowingly aids a person convicted of a felony or charged with the commission of a felony, or charged with or adjudicated delinquent for an act which, if committed by an adult, would constitute a felony, in escaping from any penal institution or from the custody of any employee of that institution commits a Class 2 felony; however, whoever knowingly aids a person convicted of a felony or charged with the commission of a felony, or charged with or adjudicated delinquent for an act which, if committed by an adult, would constitute a felony, in failing to return from furlough or from work and day release is guilty of a Class 3 felony.</p><p class='subsection'>\(c) Whoever knowingly aids a person convicted of a misdemeanor or charged with the commission of a misdemeanor, or charged with or adjudicated delinquent for an act which, if committed by an adult, would constitute a misdemeanor, in escaping from any penal institution or from the custody of an employee of that institution commits a Class A misdemeanor; however, whoever knowingly aids a person convicted of a misdemeanor or charged with the commission of a misdemeanor, or charged with or adjudicated delinquent for an act which, if committed by an adult, would constitute a misdemeanor, in failing to return from furlough or from work and day release is guilty of a Class B misdemeanor.</p><p class='subsection'>\(d) Whoever knowingly aids a person in escaping from any public institution, other than a penal institution, in which he is lawfully detained, or from the custody of an employee of that institution, commits a Class A misdemeanor.</p><p class='subsection'>\(e) Whoever knowingly aids a person in the lawful custody of a peace officer for the alleged commission of a felony offense or an act which, if committed by an adult, would constitute a felony, in escaping from custody commits a Class 2 felony; however, whoever knowingly aids a person in the lawful custody of a peace officer for the alleged commission of a misdemeanor offense or an act which, if committed by an adult, would constitute a misdemeanor, in escaping from custody commits a Class A misdemeanor.</p><p class='subsection'>\(f) An officer or employee of any penal institution who recklessly permits any prisoner in his custody to escape commits a Class A misdemeanor.</p><p class='subsection'>\(f-5) With respect to a person in the lawful custody of a peace officer for an alleged violation of a term or condition of probation, conditional discharge, parole, aftercare release, or mandatory supervised release for a felony, whoever intentionally aids that person to escape from that custody is guilty of a Class 2 felony.</p><p class='subsection'>\(f-6) With respect to a person who is in the lawful custody of a peace officer for an alleged violation of a term or condition of supervision, probation, or conditional discharge for a misdemeanor, whoever intentionally aids that person to escape from that custody is guilty of a Class A misdemeanor.</p><p class='subsection'>\(g) A person who violates this Section while armed with a dangerous weapon commits a Class 2 felony.</p><p>(Source: P.A. 98-558, eff. 1-1-14.)</p>### (720 ILCS 5/31-8) (from Ch. 38, par. 31-8)
 ## Sec. 31-8. Refusing to aid an officer.
 <p>Whoever upon command refuses or knowingly fails reasonably to aid a person known by him to be a peace officer in:</p><p class='subsection'>\(a) Apprehending a person whom the officer is authorized to apprehend; or</p><p class='subsection'>\(b) Preventing the commission by another of any offense, commits a petty offense.</p><p>(Source: P.A. 77-2638.)</p>### (720 ILCS 5/31-9)
-## Sec. 31-9. Obstructing an emergency management worker. A person who knowingly obstructs the performance by one known to the person to be an emergency management worker of any authorized act within his or her official capacity commits a Class A misdemeanor.
+## Sec. 31-9. Obstructing an emergency management worker.
+<p>A person who knowingly obstructs the performance by one known to the person to be an emergency management worker of any authorized act within his or her official capacity commits a Class A misdemeanor.</p>
 <p>(Source: P.A. 94-243, eff. 1-1-06.)</p>
